Fix SonarCloud code smells: transient controller, WindowConstants, toList(), remove useless lambdas